# gotrue-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: provider.rs  provider_local.rs
infra/: docker-compose.yml
src/: admin_user_attributes.rs  api.rs  client.rs  error.rs  go_true_api.rs  go_true_client.rs  lib.rs  main.rs  session.rs  user.rs  user_attributes.rs  user_list.rs  user_update.rs
tests/: api.rs  client.rs
