[package]
name = "go_true"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
rand = "*"
sha2 = "0.10.2"
tokio = { version = "1.19.2", features = ["macros"] }
