[package]
name = "go_true"
version = "0.1.1"
edition = "2021"
authors = ["Fabian Kutsche <kutschefabian@gmail.com>"]
description = "GoTrue client written in rust"
license = "MIT"
homepage = "https://github.com/Fubinator/gotrue-rs"
repository = "https://github.com/Fubinator/gotrue-rs"
readme = "README.md"
keywords = ["gotrue", "rest", "api", "supabase"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
sha2 = "0.10.2"
tokio = { version = "1.20.4", features = ["macros"] }
